--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       background-color: #1f1f1f;
       padding: 30px 20px;
     }
-    .logo {
-      max-width: 150px;
-      display: block;
-      margin: 0 auto 20px;
-    }
     h1 {
       font-size: 3em;
       margin: 0;
@@ -65,11 +60,18 @@
       padding: 30px;
       font-size: 0.9em;
     }
+    .social a {
+      margin: 0 10px;
+      display: inline-block;
+    }
+    .social img {
+      width: 32px;
+      height: 32px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img class="logo" src="logo.jpg" alt="Robot Man Logo" />
     <h1>Robot Man</h1>
     <a class="btn-play" href="https://gd.games/mohmedamr/robot-man" target="_blank">🎮 العب الآن</a>
   </header>
@@ -83,8 +85,8 @@
     <h2>صور من داخل اللعبة</h2>
     <div class="gallery">
       <img src="screenshot1.png" alt="لقطة 1" />
-      <img src="logo.jpg" alt="لقطة 2" />
-      <img src="screenshot1.png" alt="لقطة 3" />
+      <img src="Screenshot 2025-07-26 145732.png" alt="لقطة 3" />
+      <img src="screenshot1.png" alt="لقطة 2" />
     </div>
     <div class="instructions">
       <p>استخدم الأسهم للتحرك</p>
@@ -93,6 +95,17 @@
   </section>
 
   <footer>
+    <div class="social">
+      <a href="https://www.facebook.com/profile.php?id=100094599949337" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+      </a>
+      <a href="https://discord.gg/MSNcJF9a" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
+      </a>
+      <a href="https://t.me/+owM4Feeifz45NWNk" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
+      </a>
+    </div>
     <p>&copy; 2025 Robot Man. جميع الحقوق محفوظة.</p>
   </footer>
 </body>
