--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h2>صور من داخل اللعبة</h2>
     <div class="gallery">
       <img src="screenshot1.png" alt="لقطة 1" />
-      <img src="Screenshot 2025-07-26 145732.png" alt="لقطة 3" />
+      <img src="screenshot3.png" alt="لقطة 3" />
       <img src="screenshot1.png" alt="لقطة 2" />
     </div>
     <div class="instructions">
