--- a/index.html
+++ b/index.html
@@ -110,3 +110,115 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="روبوت مان لعبة مغامرات ممتعة حيث تقود روبوت في عالم من التحديات. العب الآن واستمتع!" />
+  <meta name="keywords" content="روبوت, لعبة روبوت, robot man, العاب منصات, gd.games, مغامرات, ألعاب كمبيوتر, ألعاب مجانية" />
+  <meta name="robots" content="index, follow" />
+  <title>Robot Man - لعبة روبوت مان</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6752195805081995" crossorigin="anonymous"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background-color: #0f0f0f;
+      color: #fff;
+      text-align: center;
+    }
+    header {
+      background-color: #1f1f1f;
+      padding: 30px 20px;
+    }
+    h1 {
+      font-size: 3em;
+      margin: 0;
+      color: #00ffcc;
+    }
+    .btn-play {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 15px 30px;
+      background-color: #00ffcc;
+      color: #000;
+      font-weight: bold;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 10px;
+      text-decoration: none;
+    }
+    section {
+      padding: 40px 20px;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+    .gallery img {
+      width: 300px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
+    }
+    .instructions p {
+      margin: 10px 0;
+    }
+    footer {
+      background-color: #111;
+      padding: 30px;
+      font-size: 0.9em;
+    }
+    .social a {
+      margin: 0 10px;
+      display: inline-block;
+    }
+    .social img {
+      width: 32px;
+      height: 32px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Robot Man</h1>
+    <a class="btn-play" href="https://gd.games/mohmedamr/robot-man" target="_blank">🎮 العب الآن</a>
+  </header>
+
+  <section>
+    <h2>عن اللعبة</h2>
+    <p>روبوت مان هي لعبة مغامرات ممتعة حيث تقود روبوت صغير في طريق مليء بالتحديات والأعداء. اقفز فوق العقبات، وأكمل المراحل لتصبح البطل!</p>
+  </section>
+
+  <section>
+    <h2>صور من داخل اللعبة</h2>
+    <div class="gallery">
+      <img src="screenshot1.png" alt="لقطة 1" />
+      <img src="Screenshot%202025-07-26%20145732.png" alt="لقطة 3" />
+      <img src="screenshot1.png" alt="لقطة 2" />
+    </div>
+    <div class="instructions">
+      <p>استخدم الأسهم للتحرك</p>
+      <p>اضغط زر المسافة للقفز</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="social">
+      <a href="https://www.facebook.com/profile.php?id=100094599949337" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+      </a>
+      <a href="https://discord.gg/MSNcJF9a" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
+      </a>
+      <a href="https://t.me/+owM4Feeifz45NWNk" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
+      </a>
+    </div>
+    <p>&copy; 2025 Robot Man. جميع الحقوق محفوظة.</p>
+  </footer>
+</body>
+</html>
