--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="روبوت مان لعبة مغامرات ممتعة حيث تقود روبوت في عالم من التحديات. العب الآن واستمتع!" />
-  <meta name="keywords" content="روبوت, لعبة روبوت, robot man, العاب منصات, gd.games, مغامرات, ألعاب كمبيوتر, ألعاب مجانية" />
-  <meta name="robots" content="index, follow" />
-  <title>Robot Man - لعبة روبوت مان</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- تحسينات SEO -->
+  <title>Robot Man - لعبة روبوت مان المجانية</title>
+  <meta name="description" content="اكتشف لعبة روبوت مان Robot Man، لعبة مغامرات ممتعة حيث تقود روبوت شجاع في عالم مليء بالتحديات. العب الآن مجاناً واستمتع بالإثارة!">
+  <meta name="keywords" content="Robot Man, لعبة روبوت مان, لعبة روبوت, ألعاب روبوت, ألعاب مغامرات, ألعاب مجانية, gd.games, ألعاب أونلاين">
+  <meta name="robots" content="index, follow">
+
+  <!-- كود إعلانات جوجل (AdSense) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6752195805081995" crossorigin="anonymous"></script>
+
   <style>
     body {
       margin: 0;
-      font-family: 'Cairo', sans-serif;
+      font-family: 'Tahoma', sans-serif;
       background-color: #0f0f0f;
       color: #fff;
       text-align: center;
     }
+
     header {
       background-color: #1f1f1f;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
+
     h1 {
       font-size: 3em;
       margin: 0;
       color: #00ffcc;
     }
+
     .btn-play {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 30px;
       padding: 15px 30px;
       background-color: #00ffcc;
       color: #000;
@@ -37,168 +44,100 @@
       border: none;
       border-radius: 10px;
       text-decoration: none;
+      transition: background 0.3s;
     }
+
+    .btn-play:hover {
+      background-color: #00e6b8;
+    }
+
     section {
-      padding: 40px 20px;
+      padding: 60px 20px;
     }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
+
     .gallery img {
-      width: 300px;
+      max-width: 90%;
+      margin: 10px auto;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
     }
-    .instructions p {
-      margin: 10px 0;
-    }
+
     footer {
       background-color: #111;
       padding: 30px;
       font-size: 0.9em;
     }
+
     .social a {
       margin: 0 10px;
-      display: inline-block;
-    }
-    .social img {
-      width: 32px;
-      height: 32px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Robot Man</h1>
-    <a class="btn-play" href="https://gd.games/mohmedamr/robot-man" target="_blank">🎮 العب الآن</a>
-  </header>
-
-  <section>
-    <h2>عن اللعبة</h2>
-    <p>روبوت مان هي لعبة مغامرات ممتعة حيث تقود روبوت صغير في طريق مليء بالتحديات والأعداء. اقفز فوق العقبات، وأكمل المراحل لتصبح البطل!</p>
-  </section>
-
-  <section>
-    <h2>صور من داخل اللعبة</h2>
-    <div class="gallery">
-      <img src="screenshot1.png" alt="لقطة 1" />
-      <img src="Screenshot%202025-07-26%20145732.png" alt="لقطة 3" />
-      <img src="screenshot1.png" alt="لقطة 2" />
-    </div>
-    <div class="instructions">
-      <p>استخدم الأسهم للتحرك</p>
-      <p>اضغط زر المسافة للقفز</p>
-    </div>
-  </section>
-
-  <footer>
-    <div class="social">
-      <a href="https://www.facebook.com/profile.php?id=100094599949337" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
-      </a>
-      <a href="https://discord.gg/MSNcJF9a" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
-      </a>
-      <a href="https://t.me/+owM4Feeifz45NWNk" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
-      </a>
-    </div>
-    <p>&copy; 2025 Robot Man. جميع الحقوق محفوظة.</p>
-  </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="روبوت مان لعبة مغامرات ممتعة حيث تقود روبوت في عالم من التحديات. العب الآن واستمتع!" />
-  <meta name="keywords" content="روبوت, لعبة روبوت, robot man, العاب منصات, gd.games, مغامرات, ألعاب كمبيوتر, ألعاب مجانية" />
-  <meta name="robots" content="index, follow" />
-  <title>Robot Man - لعبة روبوت مان</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6752195805081995" crossorigin="anonymous"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background-color: #0f0f0f;
-      color: #fff;
-      text-align: center;
-    }
-    header {
-      background-color: #1f1f1f;
-      padding: 30px 20px;
-    }
-    h1 {
-      font-size: 3em;
-      margin: 0;
-      color: #00ffcc;
-    }
-    .btn-play {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 15px 30px;
-      background-color: #00ffcc;
-      color: #000;
-      font-weight: bold;
-      font-size: 1.2em;
-      border: none;
-      border-radius: 10px;
       text-decoration: none;
     }
-    section {
-      padding: 40px 20px;
-    }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .gallery img {
-      width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
-    }
-    .instructions p {
-      margin: 10px 0;
-    }
-    footer {
-      background-color: #111;
-      padding: 30px;
-      font-size: 0.9em;
-    }
-    .social a {
-      margin: 0 10px;
-      display: inline-block;
-    }
+
     .social img {
       width: 32px;
       height: 32px;
+      vertical-align: middle;
+    }
+
+    .comment-box {
+      margin-top: 40px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: right;
+    }
+
+    textarea, input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    button.submit-comment {
+      background-color: #00ffcc;
+      color: #000;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .comments-list {
+      text-align: right;
+      margin-top: 20px;
+    }
+
+    .comment {
+      background: #1a1a1a;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Robot Man</h1>
     <a class="btn-play" href="https://gd.games/mohmedamr/robot-man" target="_blank">🎮 العب الآن</a>
   </header>
 
   <section>
-    <h2>عن اللعبة</h2>
-    <p>روبوت مان هي لعبة مغامرات ممتعة حيث تقود روبوت صغير في طريق مليء بالتحديات والأعداء. اقفز فوق العقبات، وأكمل المراحل لتصبح البطل!</p>
+    <h2>عن لعبة روبوت مان</h2>
+    <p>
+      مرحبًا بك في <strong>لعبة روبوت مان - Robot Man</strong>!  
+      لعبة مغامرات رائعة حيث تتحكم في روبوت شجاع يواجه العقبات ويقاتل الأعداء في مستويات مليئة بالإثارة.  
+      تحرك، اقفز، واجمع الطاقة في عالم مستقبلي مليء بالتحديات.
+    </p>
   </section>
 
   <section>
     <h2>صور من داخل اللعبة</h2>
     <div class="gallery">
-      <img src="screenshot1.png" alt="لقطة 1" />
-      <img src="Screenshot%202025-07-26%20145732.png" alt="لقطة 3" />
-      <img src="screenshot1.png" alt="لقطة 2" />
+      <img src="Screenshot%202025-07-26%20145732.png" alt="لقطة من لعبة روبوت مان Robot Man Game">
     </div>
     <div class="instructions">
       <p>استخدم الأسهم للتحرك</p>
@@ -206,19 +145,45 @@
     </div>
   </section>
 
+  <section>
+    <h2>التعليقات</h2>
+    <div class="comment-box">
+      <input type="text" id="name" placeholder="اسمك">
+      <textarea id="comment" rows="4" placeholder="اكتب تعليقك هنا..."></textarea>
+      <button class="submit-comment" onclick="addComment()">نشر التعليق</button>
+      <div class="comments-list" id="commentsList"></div>
+    </div>
+  </section>
+
   <footer>
     <div class="social">
       <a href="https://www.facebook.com/profile.php?id=100094599949337" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
       </a>
       <a href="https://discord.gg/MSNcJF9a" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord">
       </a>
       <a href="https://t.me/+owM4Feeifz45NWNk" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram">
       </a>
     </div>
     <p>&copy; 2025 Robot Man. جميع الحقوق محفوظة.</p>
   </footer>
+
+  <script>
+    function addComment() {
+      const name = document.getElementById('name').value;
+      const comment = document.getElementById('comment').value;
+      if (!name || !comment) return;
+      const container = document.getElementById('commentsList');
+      const commentBox = document.createElement('div');
+      commentBox.className = 'comment';
+      commentBox.innerHTML = `<strong>${name}</strong><br>${comment}`;
+      container.prepend(commentBox);
+      document.getElementById('name').value = '';
+      document.getElementById('comment').value = '';
+    }
+  </script>
+
 </body>
 </html>
