--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+   <head><meta name="google-adsense-account" content="ca-pub-6752195805081995"></head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-6752195805081995">
 
   <!-- تحسينات SEO -->
   <title>Robot Man - لعبة روبوت مان المجانية</title>
